// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render InputRange with minimal parameters Test with value 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          -10
        </span>
      </span>
      <div
        class="input-range__track input-range__track--background"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 18.181818181818183%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 18.181818181818183%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="10"
      />
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with minimal parameters Test without value 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels input-blank"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          -10
        </span>
      </span>
      <div
        class="input-range__track input-range__track--background"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 0%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 0%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              -10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="-10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="-10"
      />
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with not applicable Test with a not applicable value 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels"
  >
    <div
      aria-disabled="true"
      class="input-range input-range--disabled"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          -10
        </span>
      </span>
      <div
        class="myTrackClass"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 0%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 0%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              -10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="-10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="-10"
      />
    </div>
    <div
      class="survey-question__input-checkbox-group-container"
    >
      <div
        class="survey-question__input-checkbox-input-container checked"
      >
        <div
          class="label-input-container"
        >
          <input
            checked=""
            class="input-checkbox"
            id="test_na_na__input-checkbox__na"
            name="test_na_na"
            type="checkbox"
            value="na"
          />
          <label
            for="test_na_na__input-checkbox__na"
          >
            <span>
              NotApplicable
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with not applicable Test with custom not applicable label 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          -10
        </span>
      </span>
      <div
        class="myTrackClass"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 18.181818181818183%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 18.181818181818183%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="survey-question__input-checkbox-group-container"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_na_na__input-checkbox__na"
            name="test_na_na"
            type="checkbox"
            value="na"
          />
          <label
            for="test_na_na__input-checkbox__na"
          >
            <span>
              Custom non applicable
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with not applicable Test with value 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          -10
        </span>
      </span>
      <div
        class="myTrackClass"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 18.181818181818183%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 18.181818181818183%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="survey-question__input-checkbox-group-container"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_na_na__input-checkbox__na"
            name="test_na_na"
            type="checkbox"
            value="na"
          />
          <label
            for="test_na_na__input-checkbox__na"
          >
            <span>
              NotApplicable
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with not applicable Test without value 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels input-blank"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          -10
        </span>
      </span>
      <div
        class="myTrackClass"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 0%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 0%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              -10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="-10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="-10"
      />
    </div>
    <div
      class="survey-question__input-checkbox-group-container"
    >
      <div
        class="survey-question__input-checkbox-input-container"
      >
        <div
          class="label-input-container"
        >
          <input
            class="input-checkbox"
            id="test_na_na__input-checkbox__na"
            name="test_na_na"
            type="checkbox"
            value="na"
          />
          <label
            for="test_na_na__input-checkbox__na"
          >
            <span>
              NotApplicable
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with various parameters Test trackclass and labels 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          l-10
        </span>
      </span>
      <div
        class="myTrackClass"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 18.181818181818183%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 18.181818181818183%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              l10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="100"
            aria-valuemin="-10"
            aria-valuenow="10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          l100
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="10"
      />
    </div>
    <div
      class="survey-question__input-range_input_labels_container"
    >
      <p
        class="__input-range_input_container_label"
      >
        unilingual text
      </p>
      <p
        class="__input-range_input_container_label __input-range_input_container_label_last"
      >
        2nd english label
      </p>
    </div>
  </div>
</div>
`;

exports[`Should correctly render InputRange with various parameters Test with min max range values 1`] = `
<div>
  <div
    class="survey-question__input-range_input_container_with_labels"
  >
    <div
      aria-disabled="false"
      class="input-range"
    >
      <span
        class="input-range__label input-range__label--min"
      >
        <span
          class="input-range__label-container"
        >
          10
        </span>
      </span>
      <div
        class="input-range__track input-range__track--background"
      >
        <div
          class="input-range__track input-range__track--active"
          style="left: 0%; width: 0%;"
        />
        <span
          class="input-range__slider-container"
          style="position: absolute; left: 0%;"
        >
          <span
            class="input-range__label input-range__label--value"
          >
            <span
              class="input-range__label-container"
            >
              10
            </span>
          </span>
          <div
            aria-labelledby="test_label"
            aria-valuemax="40"
            aria-valuemin="10"
            aria-valuenow="10"
            class="input-range__slider"
            draggable="false"
            role="slider"
            tabindex="0"
          />
        </span>
      </div>
      <span
        class="input-range__label input-range__label--max"
      >
        <span
          class="input-range__label-container"
        >
          40
        </span>
      </span>
      <input
        name="test"
        type="hidden"
        value="10"
      />
    </div>
  </div>
</div>
`;
